--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
 		<script src="listener.js" type="text/javascript" charset="utf-8"></script>
 		<script src="rule.js" type="text/javascript" charset="utf-8"></script>
 		<script type="text/javascript">
+			console.log(name)
+			var name=3
+		
 			// 2个长度的蛇
 			let interval = 200
 			// 方块大小
